<resources>
    <string name="app_name">RIMA</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Mi perfil</string>
    <string name="menu_total_incidents">Incidentes Totales</string>
    <string name="menu_km_incidents">Incidentes 1 kilómetro</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_create">Crear</string>
    <string name="menu_personal_alerts">Mis alertas</string>
</resources>
